samples/_failures_safe/1761094500_3797bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25311d2e.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
